--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-kivy
-kivymd
-pywhatkit
-pandas
-scikit-learn
-reportlab
+pandas==2.0.3
+scikit-learn==1.3.0
+kivy==2.2.2
+kivymd==1.1.1
+pywhatkit==5.0
+reportlab==4.0.0
